<!--
  ~ Copyright (c) 2019. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<resources>
    <string name="app_name">PictureThis</string>
    <string name="title_activity_start_game">StartGame</string>
    <string name="loading">Loading...</string>
    <string name="start_game_button">Start Game</string>
    <string name="logout_button">Logout</string>
    <string name="keyword_label">Keyword:</string>
    <string name="clue_label">Andy Jassy sent this clue:</string>
    <string name="photo_button">Take Photo</string>
    <string name="choose_file_button">Upload Existing</string>
    <string name="send_photo_button">Send Clue</string>
    <string name="send_guess_button">Submit Guess</string>
    <string name="photo_instructions">Send a photo to your partner to help them guess the keyword without including a photo of the object itself or the word in writing.</string>
    <string name="quit_button">Quit Game</string>
    <string name="streak_label">Streak: 0</string>
    <string name="photo_preview_alt_text">Preview of clue photo</string>
    <string name="guess_input_prompt">Type your guess here</string>
</resources>
