<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SendPhoto">
    <TextView
        android:id="@+id/quitGameLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="casual"
        android:text="@string/quit_button"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/user_pools_sign_in_button_margin_top_bottom"
            android:fontFamily="casual"
            android:text="@string/keyword_label"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/user_pools_form_margin"
            android:fontFamily="casual"
            android:text="Wallet"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/photoInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/user_pools_sign_in_button_margin_top_bottom"
            android:fontFamily="casual"
            android:text="@string/photo_instructions"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photoPreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/sign_in_button_margin"
            android:contentDescription="@string/photo_preview_alt_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/sendPhotoButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableStart="@android:drawable/ic_menu_send"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="@string/send_photo_button"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:visibility="gone" />

        <Button
            android:id="@+id/takePhotoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent2"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="@string/photo_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/choosePhotoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent2"
            android:drawableStart="@android:drawable/ic_menu_gallery"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="@string/choose_file_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/streakText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/streak_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/include_progress_overlay"/>
</androidx.constraintlayout.widget.ConstraintLayout>